--- a/03_nvim_lua/01_插件管理器.md
+++ b/03_nvim_lua/01_插件管理器.md
@@ -6,8 +6,7 @@
     * 下载
 
       ``` shell
-      git clone --depth 1 https://github.com/wbthomason/packer.nvim\
-      ~/.local/share/nvim/site/pack/packer/start/packer.nvim
+      git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
       ```
 
     * 配置插件管理器文件
